canine-jet.ru/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 OpenSSH - in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT -m comment --comment 'dapp_OpenSSH'

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 Nginx%20HTTPS - in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT -m comment --comment 'dapp_Nginx%20HTTPS'

### tuple ### allow tcp 80,443 0.0.0.0/0 any 0.0.0.0/0 Nginx%20Full - in
-A ufw-user-input -p tcp -m multiport --dports 80,443 -j ACCEPT -m comment --comment 'dapp_Nginx%20Full'

### tuple ### allow any 3000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3000 -j ACCEPT
-A ufw-user-input -p udp --dport 3000 -j ACCEPT

### tuple ### allow udp 51820 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 51820 -j ACCEPT

### tuple ### allow tcp 51821 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 51821 -j ACCEPT

### tuple ### allow any 9100 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9100 -j ACCEPT
-A ufw-user-input -p udp --dport 9100 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
